MvmSourceCodeMercurial/MVM_DLL/xpath_parser/output/XPathParser.cs
// $ANTLR 3.2 Sep 23, 2009 12:02:23 D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\xpath_parser\\XPath.g 2010-08-27 10:29:54

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 168, 219
// Unreachable code detected.
#pragma warning disable 162


using System;
using Antlr.Runtime;
using IList 		= System.Collections.IList;
using ArrayList 	= System.Collections.ArrayList;
using Stack 		= Antlr.Runtime.Collections.StackList;



using Antlr.Runtime.Tree;

public partial class XPathParser : Parser
{
    public static readonly string[] tokenNames = new string[] 
	{
        "<invalid>", 
		"<EOR>", 
		"<DOWN>", 
		"<UP>", 
		"XPATH", 
		"ABSOLUTE_PATH", 
		"RELATIVE_PATH", 
		"ROOT_PATH", 
		"PREDICATE", 
		"RECURSIVE_MATCH", 
		"TRAVERSE_UP", 
		"CURRENT_NODE", 
		"MATCH", 
		"PATHSEP", 
		"ABRPATH", 
		"LPAR", 
		"RPAR", 
		"LBRAC", 
		"RBRAC", 
		"MINUS", 
		"PLUS", 
		"DOT", 
		"MUL", 
		"DOTDOT", 
		"AT", 
		"COMMA", 
		"PIPE", 
		"LESS", 
		"MORE", 
		"LE", 
		"GE", 
		"COLON", 
		"CC", 
		"APOS", 
		"QUOT", 
		"AxisName", 
		"NodeType", 
		"Literal", 
		"Number", 
		"NCName", 
		"Digits", 
		"Whitespace", 
		"NCNameStartChar", 
		"NCNameChar", 
		"'/..'", 
		"'/.'", 
		"'processing-instruction'", 
		"'or'", 
		"'and'", 
		"'='", 
		"'!='", 
		"'div'", 
		"'mod'", 
		"'$'"
    };

    public const int NCName = 39;
    public const int APOS = 33;
    public const int ABSOLUTE_PATH = 5;
    public const int PATHSEP = 13;
    public const int DOTDOT = 23;
    public const int EOF = -1;
    public const int PREDICATE = 8;
    public const int TRAVERSE_UP = 10;
    public const int AT = 24;
    public const int Literal = 37;
    public const int T__51 = 51;
    public const int T__52 = 52;
    public const int Number = 38;
    public const int T__53 = 53;
    public const int LPAR = 15;
    public const int RECURSIVE_MATCH = 9;
    public const int Digits = 40;
    public const int COMMA = 25;
    public const int RBRAC = 18;
    public const int LESS = 27;
    public const int AxisName = 35;
    public const int PLUS = 20;
    public const int PIPE = 26;
    public const int NodeType = 36;
    public const int DOT = 21;
    public const int Whitespace = 41;
    public const int T__50 = 50;
    public const int NCNameStartChar = 42;
    public const int GE = 30;
    public const int T__46 = 46;
    public const int NCNameChar = 43;
    public const int T__47 = 47;
    public const int T__44 = 44;
    public const int T__45 = 45;
    public const int T__48 = 48;
    public const int T__49 = 49;
    public const int QUOT = 34;
    public const int MATCH = 12;
    public const int ABRPATH = 14;
    public const int MINUS = 19;
    public const int MUL = 22;
    public const int LBRAC = 17;
    public const int COLON = 31;
    public const int XPATH = 4;
    public const int MORE = 28;
    public const int CURRENT_NODE = 11;
    public const int ROOT_PATH = 7;
    public const int RELATIVE_PATH = 6;
    public const int RPAR = 16;
    public const int CC = 32;
    public const int LE = 29;

    // delegates
    // delegators



        public XPathParser(ITokenStream input)
    		: this(input, new RecognizerSharedState()) {
        }

        public XPathParser(ITokenStream input, RecognizerSharedState state)
    		: base(input, state) {
            InitializeCyclicDFAs();

             
        }
        
    protected ITreeAdaptor adaptor = new CommonTreeAdaptor();

    public ITreeAdaptor TreeAdaptor
    {
        get { return this.adaptor; }
        set {
    	this.adaptor = value;
    	}
    }

    override public string[] TokenNames {
		get { return XPathParser.tokenNames; }
    }

    override public string GrammarFileName {
		get { return "D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\xpath_parser\\XPath.g"; }
    }


    public class main_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "main"
    // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\xpath_parser\\XPath.g:75:1: main : expr -> ^( XPATH expr ) ;
    public XPathParser.main_return main() // throws RecognitionException [1]
    {   
        XPathParser.main_return retval = new XPathParser.main_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        XPathParser.expr_return expr1 = default(XPathParser.expr_return);


        RewriteRuleSubtreeStream stream_expr = new RewriteRuleSubtreeStream(adaptor,"rule expr");
        try 
    	{
            // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\xpath_parser\\XPath.g:75:7: ( expr -> ^( XPATH expr ) )
            // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\xpath_parser\\XPath.g:75:10: expr
            {
            	PushFollow(FOLLOW_expr_in_main340);
            	expr1 = expr();
            	state.followingStackPointer--;

            	stream_expr.Add(expr1.Tree);


            	// AST REWRITE
            	// elements:          expr
            	// token labels:      
            	// rule labels:       retval
            	// token list labels: 
            	// rule list labels:  
            	// wildcard labels: 
            	retval.Tree = root_0;
            	RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval!=null ? retval.Tree : null);

            	root_0 = (object)adaptor.GetNilNode();
            	// 75:15: -> ^( XPATH expr )
            	{
            	    // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\xpath_parser\\XPath.g:75:18: ^( XPATH expr )
            	    {
            	    object root_1 = (object)adaptor.GetNilNode();
            	    root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(XPATH, "XPATH"), root_1);

            	    adaptor.AddChild(root_1, stream_expr.NextTree());

            	    adaptor.AddChild(root_0, root_1);
            	    }

            	}

            	retval.Tree = root_0;retval.Tree = root_0;
            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "main"

    public class locationPath_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "locationPath"
    // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\xpath_parser\\XPath.g:78:1: locationPath : ( relativeLocationPath | absoluteLocationPathNoroot );
    public XPathParser.locationPath_return locationPath() // throws RecognitionException [1]
    {   
        XPathParser.locationPath_return retval = new XPathParser.locationPath_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        XPathParser.relativeLocationPath_return relativeLocationPath2 = default(XPathParser.relativeLocationPath_return);

        XPathParser.absoluteLocationPathNoroot_return absoluteLocationPathNoroot3 = default(XPathParser.absoluteLocationPathNoroot_return);



        try 
    	{
            // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\xpath_parser\\XPath.g:79:3: ( relativeLocationPath | absoluteLocationPathNoroot )
            int alt1 = 2;
            int LA1_0 = input.LA(1);

            if ( ((LA1_0 >= DOT && LA1_0 <= AT) || (LA1_0 >= AxisName && LA1_0 <= NodeType) || LA1_0 == NCName || LA1_0 == 46) )
            {
                alt1 = 1;
            }
            else if ( ((LA1_0 >= PATHSEP && LA1_0 <= ABRPATH) || (LA1_0 >= 44 && LA1_0 <= 45)) )
            {
                alt1 = 2;
            }
            else 
            {
                NoViableAltException nvae_d1s0 =
                    new NoViableAltException("", 1, 0, input);

                throw nvae_d1s0;
            }
            switch (alt1) 
            {
                case 1 :
                    // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\xpath_parser\\XPath.g:79:6: relativeLocationPath
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_relativeLocationPath_in_locationPath362);
                    	relativeLocationPath2 = relativeLocationPath();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, relativeLocationPath2.Tree);

                    }
                    break;
                case 2 :
                    // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\xpath_parser\\XPath.g:80:6: absoluteLocationPathNoroot
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_absoluteLocationPathNoroot_in_locationPath369);
                    	absoluteLocationPathNoroot3 = absoluteLocationPathNoroot();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, absoluteLocationPathNoroot3.Tree);

                    }
                    break;

            }
            retval.Stop = input.LT(-1);

            	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "locationPath"

    public class absoluteLocationPathNoroot_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "absoluteLocationPathNoroot"
    // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\xpath_parser\\XPath.g:83:1: absoluteLocationPathNoroot : ( '/..' ( traverse )* -> ^( ABSOLUTE_PATH ^( TRAVERSE_UP ) ( traverse )* ) | '/.' ( traverse )* -> ^( ABSOLUTE_PATH ^( CURRENT_NODE ) ( traverse )* ) | '/' step ( traverse )* -> ^( ABSOLUTE_PATH ^( MATCH step ) ( traverse )* ) | '//' step ( traverse )* -> ^( ABSOLUTE_PATH ^( RECURSIVE_MATCH step ) ( traverse )* ) );
    public XPathParser.absoluteLocationPathNoroot_return absoluteLocationPathNoroot() // throws RecognitionException [1]
    {   
        XPathParser.absoluteLocationPathNoroot_return retval = new XPathParser.absoluteLocationPathNoroot_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        IToken string_literal4 = null;
        IToken string_literal6 = null;
        IToken char_literal8 = null;
        IToken string_literal11 = null;
        XPathParser.traverse_return traverse5 = default(XPathParser.traverse_return);

        XPathParser.traverse_return traverse7 = default(XPathParser.traverse_return);

        XPathParser.step_return step9 = default(XPathParser.step_return);

        XPathParser.traverse_return traverse10 = default(XPathParser.traverse_return);

        XPathParser.step_return step12 = default(XPathParser.step_return);

        XPathParser.traverse_return traverse13 = default(XPathParser.traverse_return);


        object string_literal4_tree=null;
        object string_literal6_tree=null;
        object char_literal8_tree=null;
        object string_literal11_tree=null;
        RewriteRuleTokenStream stream_ABRPATH = new RewriteRuleTokenStream(adaptor,"token ABRPATH");
        RewriteRuleTokenStream stream_45 = new RewriteRuleTokenStream(adaptor,"token 45");
        RewriteRuleTokenStream stream_44 = new RewriteRuleTokenStream(adaptor,"token 44");
        RewriteRuleTokenStream stream_PATHSEP = new RewriteRuleTokenStream(adaptor,"token PATHSEP");
        RewriteRuleSubtreeStream stream_traverse = new RewriteRuleSubtreeStream(adaptor,"rule traverse");
        RewriteRuleSubtreeStream stream_step = new RewriteRuleSubtreeStream(adaptor,"rule step");
        try 
    	{
            // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\xpath_parser\\XPath.g:84:3: ( '/..' ( traverse )* -> ^( ABSOLUTE_PATH ^( TRAVERSE_UP ) ( traverse )* ) | '/.' ( traverse )* -> ^( ABSOLUTE_PATH ^( CURRENT_NODE ) ( traverse )* ) | '/' step ( traverse )* -> ^( ABSOLUTE_PATH ^( MATCH step ) ( traverse )* ) | '//' step ( traverse )* -> ^( ABSOLUTE_PATH ^( RECURSIVE_MATCH step ) ( traverse )* ) )
            int alt6 = 4;
            switch ( input.LA(1) ) 
            {
            case 44:
            	{
                alt6 = 1;
                }
                break;
            case 45:
            	{
                alt6 = 2;
                }
                break;
            case PATHSEP:
            	{
                alt6 = 3;
                }
                break;
            case ABRPATH:
            	{
                alt6 = 4;
                }
                break;
            	default:
            	    NoViableAltException nvae_d6s0 =
            	        new NoViableAltException("", 6, 0, input);

            	    throw nvae_d6s0;
            }

            switch (alt6) 
            {
                case 1 :
                    // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\xpath_parser\\XPath.g:84:5: '/..' ( traverse )*
                    {
                    	string_literal4=(IToken)Match(input,44,FOLLOW_44_in_absoluteLocationPathNoroot382);  
                    	stream_44.Add(string_literal4);

                    	// D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\xpath_parser\\XPath.g:84:11: ( traverse )*
                    	do 
                    	{
                    	    int alt2 = 2;
                    	    int LA2_0 = input.LA(1);

                    	    if ( ((LA2_0 >= PATHSEP && LA2_0 <= ABRPATH) || (LA2_0 >= 44 && LA2_0 <= 45)) )
                    	    {
                    	        alt2 = 1;
                    	    }


                    	    switch (alt2) 
                    		{
                    			case 1 :
                    			    // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\xpath_parser\\XPath.g:84:12: traverse
                    			    {
                    			    	PushFollow(FOLLOW_traverse_in_absoluteLocationPathNoroot385);
                    			    	traverse5 = traverse();
                    			    	state.followingStackPointer--;

                    			    	stream_traverse.Add(traverse5.Tree);

                    			    }
                    			    break;

                    			default:
                    			    goto loop2;
                    	    }
                    	} while (true);

                    	loop2:
                    		;	// Stops C# compiler whining that label 'loop2' has no statements



                    	// AST REWRITE
                    	// elements:          traverse
                    	// token labels:      
                    	// rule labels:       retval
                    	// token list labels: 
                    	// rule list labels:  
                    	// wildcard labels: 
                    	retval.Tree = root_0;
                    	RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval!=null ? retval.Tree : null);

                    	root_0 = (object)adaptor.GetNilNode();
                    	// 84:23: -> ^( ABSOLUTE_PATH ^( TRAVERSE_UP ) ( traverse )* )
                    	{
                    	    // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\xpath_parser\\XPath.g:84:25: ^( ABSOLUTE_PATH ^( TRAVERSE_UP ) ( traverse )* )
                    	    {
                    	    object root_1 = (object)adaptor.GetNilNode();
                    	    root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(ABSOLUTE_PATH, "ABSOLUTE_PATH"), root_1);

                    	    // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\xpath_parser\\XPath.g:84:41: ^( TRAVERSE_UP )
                    	    {
                    	    object root_2 = (object)adaptor.GetNilNode();
                    	    root_2 = (object)adaptor.BecomeRoot((object)adaptor.Create(TRAVERSE_UP, "TRAVERSE_UP"), root_2);

                    	    adaptor.AddChild(root_1, root_2);
                    	    }
                    	    // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\xpath_parser\\XPath.g:84:56: ( traverse )*
                    	    while ( stream_traverse.HasNext() )
                    	    {
                    	        adaptor.AddChild(root_1, stream_traverse.NextTree());

                    	    }
                    	    stream_traverse.Reset();

                    	    adaptor.AddChild(root_0, root_1);
                    	    }

                    	}

                    	retval.Tree = root_0;retval.Tree = root_0;
                    }
                    break;
                case 2 :
                    // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\xpath_parser\\XPath.g:85:5: '/.' ( traverse )*
                    {
                    	string_literal6=(IToken)Match(input,45,FOLLOW_45_in_absoluteLocationPathNoroot407);  
                    	stream_45.Add(string_literal6);

                    	// D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\xpath_parser\\XPath.g:85:10: ( traverse )*
                    	do 
                    	{
                    	    int alt3 = 2;
                    	    int LA3_0 = input.LA(1);

                    	    if ( ((LA3_0 >= PATHSEP && LA3_0 <= ABRPATH) || (LA3_0 >= 44 && LA3_0 <= 45)) )
                    	    {
                    	        alt3 = 1;
                    	    }


                    	    switch (alt3) 
                    		{
                    			case 1 :
                    			    // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\xpath_parser\\XPath.g:85:11: traverse
                    			    {
                    			    	PushFollow(FOLLOW_traverse_in_absoluteLocationPathNoroot410);
                    			    	traverse7 = traverse();
                    			    	state.followingStackPointer--;

                    			    	stream_traverse.Add(traverse7.Tree);

                    			    }
                    			    break;

                    			default:
                    			    goto loop3;
                    	    }
                    	} while (true);

                    	loop3:
                    		;	// Stops C# compiler whining that label 'loop3' has no statements



                    	// AST REWRITE
                    	// elements:          traverse
                    	// token labels:      
                    	// rule labels:       retval
                    	// token list labels: 
                    	// rule list labels:  
                    	// wildcard labels: 
                    	retval.Tree = root_0;
                    	RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval!=null ? retval.Tree : null);

                    	root_0 = (object)adaptor.GetNilNode();
                    	// 85:22: -> ^( ABSOLUTE_PATH ^( CURRENT_NODE ) ( traverse )* )
                    	{
                    	    // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\xpath_parser\\XPath.g:85:24: ^( ABSOLUTE_PATH ^( CURRENT_NODE ) ( traverse )* )
                    	    {
                    	    object root_1 = (object)adaptor.GetNilNode();
                    	    root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(ABSOLUTE_PATH, "ABSOLUTE_PATH"), root_1);

                    	    // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\xpath_parser\\XPath.g:85:40: ^( CURRENT_NODE )
                    	    {
                    	    object root_2 = (object)adaptor.GetNilNode();
                    	    root_2 = (object)adaptor.BecomeRoot((object)adaptor.Create(CURRENT_NODE, "CURRENT_NODE"), root_2);

                    	    adaptor.AddChild(root_1, root_2);
                    	    }
                    	    // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\xpath_parser\\XPath.g:85:56: ( traverse )*
                    	    while ( stream_traverse.HasNext() )
                    	    {
                    	        adaptor.AddChild(root_1, stream_traverse.NextTree());

                    	    }
                    	    stream_traverse.Reset();

                    	    adaptor.AddChild(root_0, root_1);
                    	    }

                    	}

                    	retval.Tree = root_0;retval.Tree = root_0;
                    }
                    break;
                case 3 :
                    // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\xpath_parser\\XPath.g:87:5: '/' step ( traverse )*
                    {
                    	char_literal8=(IToken)Match(input,PATHSEP,FOLLOW_PATHSEP_in_absoluteLocationPathNoroot435);  
                    	stream_PATHSEP.Add(char_literal8);

                    	PushFollow(FOLLOW_step_in_absoluteLocationPathNoroot438);
                    	step9 = step();
                    	state.followingStackPointer--;

                    	stream_step.Add(step9.Tree);
                    	// D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\xpath_parser\\XPath.g:87:15: ( traverse )*
                    	do 
                    	{
                    	    int alt4 = 2;
                    	    int LA4_0 = input.LA(1);

                    	    if ( ((LA4_0 >= PATHSEP && LA4_0 <= ABRPATH) || (LA4_0 >= 44 && LA4_0 <= 45)) )
                    	    {
                    	        alt4 = 1;
                    	    }


                    	    switch (alt4) 
                    		{
                    			case 1 :
                    			    // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\xpath_parser\\XPath.g:87:16: traverse
                    			    {
                    			    	PushFollow(FOLLOW_traverse_in_absoluteLocationPathNoroot441);
                    			    	traverse10 = traverse();
                    			    	state.followingStackPointer--;

                    			    	stream_traverse.Add(traverse10.Tree);

                    			    }
                    			    break;

                    			default:
                    			    goto loop4;
                    	    }
                    	} while (true);

                    	loop4:
                    		;	// Stops C# compiler whining that label 'loop4' has no statements



                    	// AST REWRITE
                    	// elements:          step, traverse
                    	// token labels:      
                    	// rule labels:       retval
                    	// token list labels: 
                    	// rule list labels:  
                    	// wildcard labels: 
                    	retval.Tree = root_0;
                    	RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval!=null ? retval.Tree : null);

                    	root_0 = (object)adaptor.GetNilNode();
                    	// 87:27: -> ^( ABSOLUTE_PATH ^( MATCH step ) ( traverse )* )
                    	{
                    	    // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\xpath_parser\\XPath.g:87:29: ^( ABSOLUTE_PATH ^( MATCH step ) ( traverse )* )
                    	    {
                    	    object root_1 = (object)adaptor.GetNilNode();
                    	    root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(ABSOLUTE_PATH, "ABSOLUTE_PATH"), root_1);

                    	    // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\xpath_parser\\XPath.g:87:45: ^( MATCH step )
                    	    {
                    	    object root_2 = (object)adaptor.GetNilNode();
                    	    root_2 = (object)adaptor.BecomeRoot((object)adaptor.Create(MATCH, "MATCH"), root_2);

                    	    adaptor.AddChild(root_2, stream_step.NextTree());

                    	    adaptor.AddChild(root_1, root_2);
                    	    }
                    	    // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\xpath_parser\\XPath.g:87:59: ( traverse )*
                    	    while ( stream_traverse.HasNext() )
                    	    {
                    	        adaptor.AddChild(root_1, stream_traverse.NextTree());

                    	    }
                    	    stream_traverse.Reset();

                    	    adaptor.AddChild(root_0, root_1);
                    	    }

                    	}

                    	retval.Tree = root_0;retval.Tree = root_0;
                    }
                    break;
                case 4 :
                    // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\xpath_parser\\XPath.g:89:5: '//' step ( traverse )*
                    {
                    	string_literal11=(IToken)Match(input,ABRPATH,FOLLOW_ABRPATH_in_absoluteLocationPathNoroot468);  
                    	stream_ABRPATH.Add(string_literal11);

                    	PushFollow(FOLLOW_step_in_absoluteLocationPathNoroot471);
                    	step12 = step();
                    	state.followingStackPointer--;

                    	stream_step.Add(step12.Tree);
                    	// D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\xpath_parser\\XPath.g:89:16: ( traverse )*
                    	do 
                    	{
                    	    int alt5 = 2;
                    	    int LA5_0 = input.LA(1);

                    	    if ( ((LA5_0 >= PATHSEP && LA5_0 <= ABRPATH) || (LA5_0 >= 44 && LA5_0 <= 45)) )
                    	    {
                    	        alt5 = 1;
                    	    }


                    	    switch (alt5) 
                    		{
                    			case 1 :
                    			    // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\xpath_parser\\XPath.g:89:17: traverse
                    			    {
                    			    	PushFollow(FOLLOW_traverse_in_absoluteLocationPathNoroot474);
                    			    	traverse13 = traverse();
                    			    	state.followingStackPointer--;

                    			    	stream_traverse.Add(traverse13.Tree);

                    			    }
                    			    break;

                    			default:
                    			    goto loop5;
                    	    }
                    	} while (true);

                    	loop5:
                    		;	// Stops C# compiler whining that label 'loop5' has no statements



                    	// AST REWRITE
                    	// elements:          traverse, step
                    	// token labels:      
                    	// rule labels:       retval
                    	// token list labels: 
                    	// rule list labels:  
                    	// wildcard labels: 
                    	retval.Tree = root_0;
                    	RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval!=null ? retval.Tree : null);

                    	root_0 = (object)adaptor.GetNilNode();
                    	// 89:28: -> ^( ABSOLUTE_PATH ^( RECURSIVE_MATCH step ) ( traverse )* )
                    	{
                    	    // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\xpath_parser\\XPath.g:89:30: ^( ABSOLUTE_PATH ^( RECURSIVE_MATCH step ) ( traverse )* )
                    	    {
                    	    object root_1 = (object)adaptor.GetNilNode();
                    	    root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(ABSOLUTE_PATH, "ABSOLUTE_PATH"), root_1);
